# cpp_etudes

./: .gitignore  CMakeLists.txt  README.md  accelerated_queries.sh  analyze.pl  analyze2.pl  analyze3.pl  analyze4.pl  append_semicolon  backup_branch_clean.sh  calltree.pl  calltree_beta.pl  calltree_fat.pl  calltree_new.pl  calltree_score.pl  calltree_usage.txt  cherry-pick.sh  chop_tmp.sh  clang.sh  cmake_debug.sh  color_palette.pl  cpp_class_hierarchy.pl  cpp_class_hierarchy_new.pl  cpptree.pl  create_table.pl  csvtable.pl  data.pl  demo0  demo2  deptree.pl  disable_cpu_scale.sh  download.pl  driver_index.pl  dufiles.pl  effective_sched.pl  example_1_1_wc.lex  fdiff.pl  fintersect.pl  fio_benchmark.pl  format.sh  (+34 more)
benchmark/: CMakeLists.txt  basic_usage.cc  benchmark_calc_harmonic_mean.cc  benchmark_concat.cc  benchmark_function_args_more_or_less.cc  benchmark_hexdigit.cc  benchmark_int_arithmetic.cc  benchmark_int_arithmetic_single.cc  benchmark_interpreters.cc  benchmark_memequal.cc  benchmark_memequal_shuffle0.cc  benchmark_memequal_shuffle1.cc  benchmark_raw_allocator.cc  benchmark_repeat.cc  benchmark_string_functions.cc  benchmark_string_functions_case.cc  benchmark_string_functions_substr.cc  benchmark_vector.cc  doris_benchmark.cc  vectorized_bm.cc
cmakes/: compile_library.cmake  llvm.cmake
docs/: UDF_write_once_and_run_anywhere.md  clickhouse_storage_chewsrc.md  five_aspects_of_distributed_storage.md  leveldb_chewsrc_en.md  leveldb_chewsrc_zh.md  libtask_code_reading.md  lucene_chewsrc_en.md  lucene_chewsrc_zh.md  muduo_code_reading.md  sogou_workflow_code_reading.md  source_code_reading_methodology.md  wal.md
flex_and_bison/: Makefile  arithmetic  arithmetic.l  arithmetic.tab.c  arithmetic.tab.h  arithmetic.y  arithmetic2  arithmetic2.c  arithmetic2.l  arithmetic_lex.c  example_1_1_wc_lexer.cpp  example_1_3.lex  lex.yy.c
include/: async.hh  binary_column.hh  concat.hh  const_optimize.h  decimalv3.hh  default_init_allocator.hh  delegate.hh  foobar.hh  function_args_more_or_less.hh  function_match.hh  guard.hh  hexdigit.hh  hll.hh  llvm.hh  measure_time.hh  memequal.hh  meta_macro.hh  nonblock_queue.hh  pred_guard.hh  raw_container.hh  repeat.hh  reverse.hh  sequential_mutex.h  string_functions.hh  trim.hh
include/analysis/: analysis.h
include/concurrent/: hash.hh  list.hh  mark_ptr_type.hh
include/decimal/: decimal.hh
include/decimal_microbm/: decimal_microbm.hh
include/folly/: folly-config.h
include/folly/detail/: TurnSequencer.h
include/interpreters/: interpreters.hh
include/util/: bits_op.hh  defer.hh
src/main/: CMakeLists.txt  asm_add.cc  atomic_fetch_add_strength_test.cc  cache_oom.cc  decimal_add_sub_mul_div.cc  div_mod.cc  gen_decimal.cc  interpreter_demo.cc  jit_demo.cc  playground.cc  simd.cc  string_insert.cc
src/modules/: CMakeLists.txt
src/modules/analysis/: CMakeLists.txt  analysis.cc
src/modules/concurrent/: CMakeLists.txt  hash.cc  list.cc
src/modules/decimal_microbm/: CMakeLists.txt  decimal.cc  decimal_microbm.cc
src/modules/folly/: CMakeLists.txt  SafeAssert.cpp
src/modules/foobar/: CMakeLists.txt  foobar.cc
src/modules/interpreters/: CMakeLists.txt  interpreters.cc
src/modules/lru_cache/: CMakeLists.txt  cache_manager.cc  cache_manager.hh  lru_cache.cc  lru_cache.hh  slice.cc  slice.hh
unittest/: CMakeLists.txt  decimal_microbm_test.cc  gtest_demo.cc  hash_test.cc  hello_world.cc  list_test.cc  mark_ptr_type_test.cc  misc_test.cc  test_analysis.cc  test_async.cc  test_c++17.cc  test_decimal.cc  test_decimalv3.cc  test_default_init_allocator.cc  test_delegation.cc  test_function_match.cc  test_futex.cc  test_guard.cc  test_interpreters.cc  test_llvm.cc  test_memory_leak.cc  test_meta_macro.cc  test_pred_guard.cc  test_repeat.cc  test_reverse.cc  test_seq_mutex.cc  test_string_functions.cc  test_trim.cc  util_test.cc
zhihu/five_aspects_of_distributed_storage/: five_aspects_of_distributed_storage.md
